--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
    </script>
+<input type="number" id="numberInput" placeholder="Enter a number (0 - 100000)" min="0" max="100000">
+  <button onclick="handleConvert()">Convert</button>
 
+  <p id="output"></p>
 </body>
 
 </html>
